SmartHire_App/force-app/main/default/objects/CandidateConversionHistory__c/CandidateConversionHistory__c.object-meta.xml
<CustomObject>
    <label>Candidate Conversion History</label>
    <nameField>
        <displayFormat>CCH-{0000}</displayFormat>
        <label>Conversion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Conversion Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 