SmartHire_App/force-app/main/default/objects/CandidateConversionHistory__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Conversion History</relationshipLabel>
    <relationshipName>Conversion_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField> 