SmartHire_App/force-app/main/default/objects/CandidateConversionHistory__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Conversion Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 