SmartHire_App/force-app/main/default/objects/CandidateConversionHistory__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Conversion History</relationshipLabel>
    <relationshipName>Conversion_History</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField> 