SmartHire_App/force-app/main/default/objects/CandidateConversionHistory__c/fields/JobApplication__c.field-meta.xml
<CustomField>
    <fullName>JobApplication__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Conversion History</relationshipLabel>
    <relationshipName>Conversion_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>