SmartHire_App/force-app/main/default/objects/CandidateConversionHistory__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>ID of the record created during conversion</description>
    <inlineHelpText>ID of the record created during conversion</inlineHelpText>
    <label>Related Record</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>